examples/test/testpolicy3392.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3392
  namespace: namespace173
spec:
  podSelector:
    matchLabels:
      key27: value7
      key28: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value45
          key16: value37
      podSelector:
        matchLabels:
          key37: value24
          key25: value19
          key9: value24
